--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -14,9 +14,9 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
   imageRepository: 'content-web'
-  resourceGroupName: 'fabmedical-[LOGINSERVER]'
-  containerRegistryName: 'fabmedical[LOGINSERVER]'
-  containerRegistry: 'fabmedical[LOGINSERVER].azurecr.io'
+  resourceGroupName: 'fabmedical-tmiotla'
+  containerRegistryName: 'fabmedicalTM'
+  containerRegistry: 'fabmedicaltm.azurecr.io'
   dockerfilePath: './content-web'
   tag: '${{ github.run_id  }}'
 
